examples/misc/error/compilation/eval_wdt_cell.bfml
let main = [
  $build {
    arr: array(3) { x }
  }
  + arr
]